<resources>
    <string name="app_name">Udacity App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="main_title">My Nanodegree Apps</string>
    <string name="app1_title">Spotify Streamer</string>
    <string name="app2_title">Scores App</string>
    <string name="app3_title">Library App</string>
    <string name="app4_title">Build It Bigger</string>
    <string name="app5_title">XYZ reader</string>
    <string name="app6_title">CapStone: My App</string>
</resources>
