<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="app.com.lentusignavus.udacityappportfolio.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/app_button_padding"
        android:text="@string/main_title"
        android:gravity="center"
        android:onClick="showSnackBar"
        android:textAlignment="center"
        android:textSize="@dimen/main_text_size"
        android:textColor="@color/darkText"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="@dimen/button_margin"
        android:layout_centerHorizontal="true"
        android:id="@+id/main_title" />

    <Button
        style="@style/appButton"
        android:text="@string/app1_title"
        android:id="@+id/app1"
        android:layout_below="@+id/main_title"
        android:layout_centerHorizontal="true"
         />

    <Button
        style="@style/appButton"

        android:text="@string/app2_title"
        android:id="@+id/app2"
        android:layout_below="@+id/app1"
        android:layout_alignStart="@+id/app1"
        android:layout_alignLeft="@+id/app1" />

    <Button
        style="@style/appButton"

        android:text="@string/app3_title"
        android:id="@+id/app3"
        android:layout_below="@+id/app2"
        android:layout_alignStart="@+id/app2"
        android:layout_alignLeft="@+id/app2" />
    <Button
        style="@style/appButton"
        android:text="@string/app4_title"
        android:id="@+id/app4"
        android:layout_below="@+id/app3"
        android:layout_alignStart="@+id/app3"
        android:layout_alignLeft="@+id/app3" />
    <Button
        style="@style/appButton"
        android:text="@string/app5_title"
        android:id="@+id/app5"
        android:layout_below="@+id/app4"
        android:layout_alignStart="@+id/app4"
        android:layout_alignLeft="@+id/app4" />
    <Button
        style="@style/appButton"
        android:text="@string/app6_title"
        android:background="@color/colorPrimaryDark"
        android:id="@+id/app6"
        android:layout_below="@+id/app5"
        android:layout_alignStart="@+id/app5"
        android:layout_alignLeft="@+id/app5" />
</RelativeLayout>
